updated to fix page view error when page is too small

--- a/css/legal.css
+++ b/css/legal.css
@@ -1,6 +1,6 @@
         html, body {
 		    max-width: 100%;
-		    /* height: 100%; */
+		    height: 100%;
 		    overflow-x: hidden;	        
             font-family: 'Roboto', sans-serif;
             color: #000;
